# aoc2024

./: Makefile  README.md  pyproject.toml
day01/: solution.py  test_solution.py
day02/: solution.py  test_solution.py
day03/: solution.py  test_solution.py
day04/: solution.py  test_solution.py
