[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = "My solutions to the Advent of Code 2024"
authors = ["Yannick Schini <yannick.schini@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
