[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = "My solutions to the Advent of Code 2024"
authors = ["Yannick Schini <yannick.schini@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
pytest = "^8.3.3"
mypy = "^1.13.0"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "E",
    "EM",
    "F",
    "FA",
    "FBT",
    "FURB",
    "I",
    "ICN",
    "ISC",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T10",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["ANN201", "S101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
